feat: restart button

--- a/quiz.html
+++ b/quiz.html
@@ -51,6 +51,7 @@
                     </div>
                     <div class="quiz-foot">
                         <button type="button" id="check-answer">Check Answer</button>
+                        <button type="button" id="restart-button">Restart</button>
                         <button type="button" id="play-again">Play Again!</button>
                     </div>
                 </div>
