--- a/quiz.html
+++ b/quiz.html
@@ -42,9 +42,9 @@
                             Score:&nbsp;<span id="correct-score"></span>/<span id="total-question"></span>
                         </div>
                     </div>
-                    <div class="quiz-body">
+                    <div id="quiz-body" class="quiz-body">
                         <h2 class="quiz-question" id="question">????</h2>
-                        <ul class="quiz-options">
+                        <ul class="quiz-options" id="quiz-options">
                         </ul>
                         <div id="result">
                         </div>
