--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <div>
                             <img class="logo" src="assets/images/logo.jpg" alt="Quizzee Rascals Logo">
                         </div>
-                        <h1 class="quiz-title">Options</h1>
+                        <h1 id="title" class="quiz-title">Options</h1>
                         <p class="quiz-title">Please Select Your Options</p>
                     </div>
                     <div>
@@ -45,6 +45,7 @@
                         <div>
                             <label for="question-count">How Many Questions: </label>
                             <select id="question-count" name="question-count" class="form-control">
+                                <option value="1">1 Question</option>
                                 <option value="5" selected>5 Questions</option>
                                 <option value="10">10 Questions</option>
                                 <option value="15">15 Questions</option>
@@ -112,9 +113,13 @@
             </div>
         </section>
     </main>
+
     <footer></footer>
 
     <script src="assets/js/start.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
