add: media queries

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             <img class="logo" src="assets/images/logo.jpg" alt="Quizzee Rascals Logo">
                         </div>
                         <h1 id="title" class="quiz-title">Options</h1>
-                        <p class="quiz-title">Please Select Your Options</p>
+                        <p class="quiz-subtitle">Please Select Your Options</p>
                     </div>
                     <div>
                         <br>
