media wuery updates

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
     <!-- TITLE -->
-    <title>Quizzee Rascals</title>
+    <title>Quiz-E</title>
 </head>
 
 <body>
