--- a/quiz.html
+++ b/quiz.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
     <!-- TITLE -->
-    <title>Quizzee Rascals</title>
+    <title>Quiz-E</title>
 </head>
 
 <body>
@@ -37,7 +37,7 @@
             <div class="wrapper">
                 <div class="quiz-container">
                     <div class="quiz-head">
-                        <h1 class="quiz-title">Quiz Game</h1>
+                        <h1 class="quiz-title">Quiz-E</h1>
                         <div class="quiz-score flex">
                             Score:&nbsp;<span id="correct-score"></span>/<span id="total-question"></span>
                         </div>
