fix: background gradient stop issue

--- a/quiz.html
+++ b/quiz.html
@@ -34,7 +34,7 @@
     </header>
     <main class="flex">
         <section>
-            <div class="wrapper">
+            <div id="wrapper" class="wrapper">
                 <div class="quiz-container">
                     <div class="quiz-head">
                         <h1 class="quiz-title">Quiz-E</h1>
